update utils lib